--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,9 +21,12 @@ travis-ci = { repository = "yewstack/yew" }
 [dependencies]
 anymap = "0.12"
 bincode = { version = "~1.2.1", optional = true }
+console_error_panic_hook = { version = "0.1", optional = true }
 failure = "0.1"
+gloo = { version = "0.2", optional = true }
 http = "0.2"
 indexmap = "1.0.2"
+js-sys = { version = "0.3", optional = true }
 log = "0.4"
 proc-macro-hack = "0.5"
 proc-macro-nested = "0.1"
@@ -33,9 +36,60 @@ serde_cbor = { version = "0.10.2", optional = true }
 serde_json = "1.0"
 serde_yaml = { version = "0.8.3", optional = true }
 slab = "0.4"
-stdweb = "0.4.20"
+stdweb = { version = "0.4.20", optional = true }
 toml = { version = "0.5", optional = true }
 yew-macro = { version = "0.10.1", path = "crates/macro" }
+
+[dependencies.web-sys]
+version = "0.3"
+optional = true
+features = [
+  "AbortController",
+  "AbortSignal",
+  "BinaryType",
+  "Blob",
+  "console",
+  "DedicatedWorkerGlobalScope",
+  "Document",
+  "DomTokenList",
+  "DragEvent",
+  "Element",
+  "Event",
+  "EventTarget",
+  "File",
+  "FileList",
+  "FileReader",
+  "FocusEvent",
+  "Headers",
+  "HtmlElement",
+  "HtmlInputElement",
+  "HtmlSelectElement",
+  "HtmlTextAreaElement",
+  "KeyboardEvent",
+  "Location",
+  "MessageEvent",
+  "MouseEvent",
+  "Node",
+  "ObserverCallback",
+  "PointerEvent",
+  "ReferrerPolicy",
+  "Request",
+  "RequestCache",
+  "RequestCredentials",
+  "RequestInit",
+  "RequestMode",
+  "RequestRedirect",
+  "Response",
+  "Storage",
+  "Text",
+  "TouchEvent",
+  "UiEvent",
+  "WebSocket",
+  "WheelEvent",
+  "Window",
+  "Worker",
+  "WorkerOptions",
+]
 
 [target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dependencies]
 wasm-bindgen = "0.2.56"
@@ -54,6 +108,8 @@ rustversion = "1.0"
 
 [features]
 default = ["services", "agent"]
+std_web = ["stdweb"]
+web_sys = ["console_error_panic_hook", "gloo", "js-sys", "web-sys"]
 doc_test = []
 web_test = []
 wasm_test = []
