--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ serde_yaml = { version = "0.8.3", optional = true }
 slab = "0.4"
 stdweb = { version = "0.4.20", optional = true }
 toml = { version = "0.5", optional = true }
+wasm-bindgen = { version = "0.2.58", optional = true }
 yew-macro = { version = "0.11.1", path = "crates/macro" }
 
 [dependencies.web-sys]
@@ -91,9 +92,7 @@ features = [
   "WorkerOptions",
 ]
 
-[target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dependencies]
-wasm-bindgen = "0.2.58"
-
+# Changes here must be reflected in `build.rs`
 [target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dev-dependencies]
 wasm-bindgen-test = "0.3.4"
 
@@ -108,7 +107,7 @@ rustversion = "1.0"
 [features]
 default = ["services", "agent"]
 std_web = ["stdweb"]
-web_sys = ["console_error_panic_hook", "gloo", "js-sys", "web-sys"]
+web_sys = ["console_error_panic_hook", "gloo", "js-sys", "web-sys", "wasm-bindgen"]
 doc_test = []
 web_test = []
 wasm_test = []
