--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ bincode = { version = "~1.2.1", optional = true }
 cfg-if = "0.1"
 cfg-match = "0.2"
 console_error_panic_hook = { version = "0.1", optional = true }
+futures = { version = "0.3", optional = true }
 gloo = { version = "0.2", optional = true }
 http = "0.2"
 indexmap = "1.0.2"
@@ -42,6 +43,7 @@ stdweb = { version = "0.4.20", optional = true }
 thiserror = "1"
 toml = { version = "0.5", optional = true }
 wasm-bindgen = { version = "0.2.58", optional = true }
+wasm-bindgen-futures = { version = "0.4", optional = true }
 yew-macro = { version = "0.11.1", path = "crates/macro" }
 
 [dependencies.web-sys]
@@ -113,7 +115,7 @@ serde_derive = "1"
 [features]
 default = []
 std_web = ["stdweb"]
-web_sys = ["console_error_panic_hook", "gloo", "js-sys", "web-sys", "wasm-bindgen"]
+web_sys = ["console_error_panic_hook", "futures", "gloo", "js-sys", "web-sys", "wasm-bindgen", "wasm-bindgen-futures"]
 doc_test = []
 wasm_test = []
 services = []
