--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -25,6 +25,7 @@ members = [
   "std_web/npm_and_rest",
   "std_web/todomvc",
   "std_web/two_apps",
+  "std_web/select",
   "web_sys/counter",
   "web_sys/file_upload",
   "web_sys/inner_html",
