--- a/examples/pub_sub/Cargo.toml
+++ b/examples/pub_sub/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2018"
 log = "0.4"
 web_logger = "0.1"
 serde = { version = "1.0", features = ["derive"] }
-yew = { path = "../.." }
+yew = { path = "../..", features = ["std_web"] }
 stdweb = "0.4.20"
