--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ slab = "0.4"
 stdweb = { version = "0.4.20", optional = true }
 thiserror = "1"
 toml = { version = "0.5", optional = true }
-wasm-bindgen = { version = "0.2.58", optional = true }
+wasm-bindgen = { version = "= 0.2.58", optional = true }
 wasm-bindgen-futures = { version = "0.4", optional = true }
 yew-macro = { version = "0.13.0", path = "crates/macro" }
 
