--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ install:
   - cargo install cargo-update || true
   - cargo install-update-config --version =0.2.60 wasm-bindgen-cli
   - cargo install-update --allow-no-update wasm-bindgen-cli
+  - cargo install-update --allow-no-update wasm-pack
   - curl --retry 5 -LO https://github.com/mozilla/geckodriver/releases/download/v0.26.0/geckodriver-v0.26.0-linux64.tar.gz
   - tar -xzf geckodriver-v0.26.0-linux64.tar.gz
   - ./ci/install_cargo_web.sh
