--- a/Cargo.toml
+++ b/Cargo.toml
@@ -138,5 +138,5 @@ features = ["web_sys", "agent", "services", "yaml", "cbor", "toml", "msgpack", "
 [workspace]
 members = [
   "crates/macro",
-  "crates/functional-yew",
+  "crates/functional",
 ]
