--- a/crates/functional/Cargo.toml
+++ b/crates/functional/Cargo.toml
@@ -31,3 +31,5 @@ wasm-bindgen-test = "0.3.4"
 
 [features]
 wasm_test = []
+web_sys = ["yew/web_sys", "web-sys"]
+std_web = ["yew/std_web", "stdweb"]
