--- a/examples/std_web/webgl/Cargo.toml
+++ b/examples/std_web/webgl/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "webgl"
+name = "webgl_std_web"
 version = "0.1.0"
 authors = ["Miklós Tusz <mdtusz@gmail.com>"]
 edition = "2018"
 
 [dependencies]
 stdweb = "0.4.20"
-yew = { path = "../..", features = [ "std_web" ] }
+yew = { path = "../../..", features = [ "std_web" ] }
 webgl_stdweb = "0.3.0"
