--- a/.travis.yml
+++ b/.travis.yml
@@ -28,10 +28,9 @@ install:
   - nvm install 9
   - rustup component add rustfmt
   - rustup component add clippy
+  - rustup install stable
   - rustup target add wasm32-unknown-unknown
-  - cargo install cargo-update || true
-  - cargo install-update-config --version =0.2.60 wasm-bindgen-cli
-  - cargo install-update --allow-no-update wasm-bindgen-cli
+  - cargo +stable install wasm-bindgen-cli
   - curl --retry 5 -LO https://github.com/mozilla/geckodriver/releases/download/v0.26.0/geckodriver-v0.26.0-linux64.tar.gz
   - tar -xzf geckodriver-v0.26.0-linux64.tar.gz
   - ./ci/install_cargo_web.sh
