--- a/examples/web_sys/counter/Cargo.toml
+++ b/examples/web_sys/counter/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.1"
 authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
 edition = "2018"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 js-sys = "0.3"
 yew = { path = "../../..", features = ["services", "web_sys"] }
