--- a/examples/web_sys/js_callback/Cargo.toml
+++ b/examples/web_sys/js_callback/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Scott Steele <scottlsteele@gmail.com>"]
 edition = "2018"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 yew = { path = "../../..", features = ["web_sys"] }
 
