--- a/examples/web_sys/multi_thread/Cargo.toml
+++ b/examples/web_sys/multi_thread/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
 edition = "2018"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [[bin]]
 name = "multi_thread_app"
 path = "src/bin/app.rs"
