--- a/examples/web_sys/node_refs/Cargo.toml
+++ b/examples/web_sys/node_refs/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Justin Starry <justin.starry@icloud.com>"]
 edition = "2018"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 yew = { path = "../../..", features = ["web_sys"] }
 web-sys = { version = "0.3", features = ["HtmlElement", "HtmlInputElement", "Node"] }
