--- a/examples/web_sys/npm_and_rest/Cargo.toml
+++ b/examples/web_sys/npm_and_rest/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
 edition = "2018"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 anyhow = "1"
 js-sys = "0.3"
