--- a/examples/web_sys/todomvc/Cargo.toml
+++ b/examples/web_sys/todomvc/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
 edition = "2018"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 strum = "0.13"
 strum_macros = "0.13"
