--- a/examples/web_sys/two_apps/Cargo.toml
+++ b/examples/web_sys/two_apps/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
 edition = "2018"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 stdweb = "0.4.20"
 yew = { path = "../../..", features = ["web_sys"] }
