--- a/examples/web_sys/webgl/Cargo.toml
+++ b/examples/web_sys/webgl/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Miklós Tusz <mdtusz@gmail.com>"]
 edition = "2018"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 js-sys = "0.3"
 yew = { path = "../../..", features = ["web_sys"] }
