--- a/yew-functional/Cargo.toml
+++ b/yew-functional/Cargo.toml
@@ -16,15 +16,9 @@ travis-ci = { repository = "yewstack/yew" }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.9"
-cfg-if = "0.1.10"
-web-sys = { version = "0.3.36" }
-yew = { path = "../yew", features = ["web_sys"] }
+web-sys = "0.3.36"
+yew = { path = "../yew" }
 
 [dependencies]
 yew = { path = "../yew" }
-
-[target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dependencies]
 wasm-bindgen = "0.2.60"
-
-[target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dev-dependencies]
-wasm-bindgen-test = "0.3.4"
