--- a/yew-stdweb/Cargo.toml
+++ b/yew-stdweb/Cargo.toml
@@ -138,14 +138,14 @@ features = ["yaml", "cbor", "toml", "msgpack", "doc_test"]
 [workspace]
 members = [
   "examples/counter",
-  # "file_upload",
-  # "inner_html",
-  # "js_callback",
-  # "mount_point",
-  # "multi_thread",
-  # "node_refs",
-  # "npm_and_rest",
-  # "todomvc",
-  # "two_apps",
-  # "webgl",
+  "examples/file_upload",
+  "examples/inner_html",
+  "examples/js_callback",
+  "examples/mount_point",
+  "examples/multi_thread",
+  "examples/node_refs",
+  "examples/npm_and_rest",
+  "examples/todomvc",
+  "examples/two_apps",
+  "examples/webgl",
 ]
